<resources>
    <string name="app_name">BPBD Kabupaten Kuningan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="peringatan_dini_detail">http://simbpbd.laurensius-dede-suhardiman.com/index.php/apps/mobile_peringatan_dini_detail/</string>
    <string name="info_bencana_detail">http://simbpbd.laurensius-dede-suhardiman.com/index.php/apps/mobile_info_bencana_detail/</string>
    <string name="laporan_masyarakat_detail">http://simbpbd.laurensius-dede-suhardiman.com/index.php/apps/mobile_laporan_masyarakat_detail/</string>
    <string name="chat">http://simbpbd.laurensius-dede-suhardiman.com/index.php/apps/mobile_chat_list/</string>
    <string name="peta_list">http://simbpbd.laurensius-dede-suhardiman.com/index.php/apps/mobile_peta_list/</string>
    <string name="peta_detail">http://simbpbd.laurensius-dede-suhardiman.com/index.php/apps/mobile_peta_detail/</string>
    <string name="kerawanan">1/</string>
    <string name="jalur_evakuasi">2/</string>
    <string name="api">http://simbpbd.laurensius-dede-suhardiman.com/index.php/api/</string>
    <string name="peringatan_dini_published">peringatan_dini_published/</string>
    <string name="info_bencana_published">info_bencana_published/</string>
    <string name="laporan_masyarakat_input">laporan_masyarakat_input/</string>
    <string name="laporan_masyarakat_by_pengirim">laporan_masyarakat_by_pengirim/</string>
    <string name="verifikasi">verifikasi/</string>
    <string name="verifikasi_daftar">verifikasi_daftar/</string>
    <string name="notifikasi">notifikasi/</string>
    <string name="user_edit">user_edit/</string>
    <string name="user_update">user_update/</string>

    <string name="beranda">file:///android_asset/landingpage/index.html</string>
    <string name="petunjuk_peringatan_dini">
        Pada fitur ini Anda akan memperoleh infomasi mengenai peringatan dini yang dikeluarkan oleh BPBD Kabupaten Kuningan.
        Setiap peringatan dini terbaru akan secara otomatis terkirim ke perangkat genggam Anda, hal ini ditandai dengan munculnya
        notifikasi pada aplikasi.
    </string>
    <string name="petunjuk_info_bencana">
        Pada fitur ini Anda akan memperoleh infomasi mengenai informasi bencana yang terjadi di Kabupaten Kuningan, informasi yang dikeluarkan langsung oleh BPBD Kabupaten Kuningan,
        sehingga informasi ini adalah informasi yang valid dan dapat dipertanggungjawabkan kebenarannya.
        Setiap informasi bencana terbaru akan secara otomatis terkirim ke perangkat genggam Anda, hal ini ditandai dengan munculnya
        notifikasi pada aplikasi.
    </string>
    <string name="petunjuk_laporan_masyarakat">
        Pada fitur ini Anda dapat melaporkan kejadian bencana yang terjadi disekitar Anda. Setiap laporan yang Anda kirim kepada BPBD Kabupaten Kuningan
        dapat Anda pantau prosesnya. Sehingga Anda tidak perlu khawatir atau bertanya-tanya mengenai kelanjutan laporan Anda. Setiap perubahan status laporan
        mulai dari tahap laporan masuk, validasi, proses penanganan sampai dengan selesai diprosesnya laporan yang masuk dapat Anda pantau.
    </string>
    <string name="petunjuk_jalur_evakuasi">
        Pada fitur ini Anda akan memperoleh infomasi mengenai rute atau wilayah yang akan dijadikan jalur evakuasi manakala terjadi bencana.
    </string>
    <string name="petunjuk_kerawanan">
        Pada fitur ini Anda akan memperoleh infomasi mengenai wilayah mana saja yang rawan terhadap terjadinya bencana, seperti : tanah longsor,
        banjir, kebakaran hutan dan gunung api.
    </string>
    <string name="petunjuk_diskusi">
        Pada fitur ini Anda dapat berinteraksi bersilang pendapat dan berdiskusi baik dengan pihak BPBD Kabupaten Kuningan maupun dengan masyarakat secara umum terkait kebencanaan.
    </string>

    <string-array name="tanggal">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="bulan">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="tahun">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>
    <string-array name="kategori">
        <item>1-Gunung Meletus</item>
        <item>2-Kebakaran Hutan dan Lahan</item>
        <item>3-Banjir</item>
        <item>4-Longsor</item>
        <item>5-Angin Kencang</item>
        <item>6-Gempa Bumi</item>
        <item>7-Angin Topan</item>
        <item>8-Kekeringan</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_master_apps">MasterApps</string>
</resources>
