<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.laurensius_dede_suhardiman.bpbdkabupatenkuningan.FragmentBeranda">

    <ImageView
        android:layout_width="256px"
        android:layout_height="256px"
        android:src="@mipmap/logo_bpbd"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=".: Petunjuk Penggunaan :."
        android:textColor="#777"
        android:textStyle="bold"
        android:textSize="9pt"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="125px"
            android:layout_height="125px"
            android:layout_margin="5dp"
            android:src="@drawable/peringatandini"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Peringatan Dini"
                android:textStyle="bold"
                android:textSize="7pt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/petunjuk_peringatan_dini"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="125px"
            android:layout_height="125px"
            android:layout_margin="5dp"
            android:src="@drawable/infobencana"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Info Bencana"
                android:textStyle="bold"
                android:textSize="7pt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/petunjuk_info_bencana"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="125px"
            android:layout_height="125px"
            android:layout_margin="5dp"
            android:src="@drawable/laporanmasyarakat"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Laporan Masyarakat"
                android:textStyle="bold"
                android:textSize="7pt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/petunjuk_laporan_masyarakat"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="125px"
            android:layout_height="125px"
            android:layout_margin="5dp"
            android:src="@drawable/petajalurevakuasi"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jalur Evakuasi"
                android:textStyle="bold"
                android:textSize="7pt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/petunjuk_jalur_evakuasi"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="125px"
            android:layout_height="125px"
            android:layout_margin="5dp"
            android:src="@drawable/petakerawanan"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kerawanan"
                android:textStyle="bold"
                android:textSize="7pt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/petunjuk_kerawanan"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">
        <ImageView
            android:layout_width="125px"
            android:layout_height="125px"
            android:layout_margin="5dp"
            android:src="@drawable/chatgroup"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Diskusi"
                android:textStyle="bold"
                android:textSize="7pt"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:text="@string/petunjuk_diskusi"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
